[package]
name = "rcr2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde-xml-rs = "0.6.0"
rusqlite = "0.33.0"
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
crc32fast = "1.4.2"
md-5 = "0.10.6"
sha1 = "0.10.6"
strum = { version = "0.27", features = ["derive"] }

[lints.clippy]
# pedantic
redundant_closure_for_method_calls = "warn"
if_not_else = "warn"
needless_borrow = "warn"
str_to_string = "warn"
to_string_in_format_args = "warn"
unnecessary_to_owned = "warn"
unwrap_used = "warn"
