[package]
name = "rcr2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
camino = "1.1.9"
clap = { version = "4.5.35", features = ["derive"] }
crc32fast = "1.4.2"
md-5 = "0.10.6"
quick-xml = { version = "0.37.4", features = ["serialize"] }
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
strum = { version = "0.27", features = ["derive"] }
zip = "2.6.1"


[lints.clippy]
# pedantic
redundant_closure_for_method_calls = "warn"
if_not_else = "warn"
needless_borrow = "warn"
str_to_string = "warn"
to_string_in_format_args = "warn"
too_many_arguments = "allow"
unnecessary_to_owned = "warn"
unwrap_used = "warn"
